# src/router/auth-router.ts
@@ -1,11 +1,22 @@
 import { Router } from 'express';
-import { login, refreshToken, register, setActiveUser } from '../controller/auth-controller';
+import {
+  forgotPassword,
+  login,
+  refreshToken,
+  register,
+  resetPassword,
+  setActiveToken,
+  setActiveUser,
+} from '../controller/auth-controller';
 
 const router = Router();
 
-router.post('/auth', register);
-router.get('/auth/set-active/:email/:memberId', setActiveUser);
-router.post('/auth/login', login);
-router.post('/auth/refresh-token', refreshToken);
+router.post('/', register);
+router.get('/set-active/:email/:memberId', setActiveUser);
+router.post('/login', login);
+router.post('/refresh-token', refreshToken);
+router.post('/forgot-password', forgotPassword);
+router.get('/set-active-token/:token', setActiveToken);
+router.patch('/reset-password/:token', resetPassword);
 
 export default router;
