# src/validation/auth-validation.ts
@@ -37,3 +37,25 @@ export const loginSchemaValidation = z.object({
 export const refreshTokenSchemaValidation = z.object({
   refreshToken: z.string().nonempty('Refresh Token Wajib Diisi').min(1, 'Refresh Token Wajib Diisi'),
 });
+
+export const forgotPasswordSchemaValidation = z.object({
+  email: z.string().nonempty('Email wajib diisi').email('Email tidak valid'),
+});
+
+export const resetPasswordSchemaValidation = z
+  .object({
+    newPassword: z
+      .string()
+      .min(8, 'Password minimal 8 karakter')
+      .nonempty('Password harus diisi')
+      .regex(/[A-Z]/, 'Password harus memiliki minimal 1 huruf besar')
+      .regex(/[a-z]/, 'Password harus memiliki minimal 1 huruf kecil')
+      .regex(/[0-9]/, 'Password harus memiliki minimal 1 angka')
+      .regex(/[!@#$%^&*()]/, 'Password harus menerapkan setidaknya 1 simbol'),
+
+    confirmNewPassword: z.string().nonempty('Konfirmasi Password harus diisi'),
+  })
+  .refine((data) => data.newPassword === data.confirmNewPassword, {
+    message: 'Password dan Konfirmasi Password harus sama',
+    path: ['confirmNewPassword'],
+  });
